working on the header

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -1,20 +1,42 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Tesla</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="styles.css">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/styles.css">
   </head>
   <body>
+      <header>
+        <nav>
+          <div class="navDivs">
+            <img src="../IMAGES/logo.svg" width="100px" alt="">
+          </div>
+          <div class="navDivs">
+            <ul>
+              <li>Model S</li>  
+              <li>Model 3</li>
+              <li>Model X</li>  
+              <li>Model Y</li>
+            </ul>
+          </div>
+          <div class="navDivs">
+            <ul>
+              <li>Shop</li>
+              <li>TESLA ACCOUNT</li>
+            </ul>
+          </div>
+        </nav>
+        <img class="HeaderHeroIMG" src="../IMAGES/hero.jpg" alt="">
+        <h1>Roadster</h1>
+      </header>
+
       
-
-
-
 
 
 
