fixed the bg URL problem (beta)

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -32,10 +32,12 @@
             </ul>
           </div>
         </nav>
-        <img class="HeaderHeroIMG" src="../IMAGES/hero.jpg" alt="">
+        <img class="HeaderHeroIMG" src="../IMAGES/hesro.jpg" alt="">
         <h1>Roadster</h1>
       </header>
-
+      <main>
+        <h1>zfzfzfzfzf</h1>
+      </main>
       
 
 
