main 1st part done

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -67,7 +67,77 @@
          <a href="../HTML/Roadster.html#sennun"><span class="material-icons">vertical_align_bottom</span></a>                           
         </div>
       </header>
-     
+     <main>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/tw4jkyfY4HE?autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <ul>
+        <li>
+          <div class="left">Base Specs</div>
+        </li>
+        <li>
+          <div class="left">Acceleration 0-60 mph</div>
+          <div class="right">1.9 sec</div>
+        </li>
+        <li>
+          <div class="left">Acceleration</div>
+          <div class="right">4.2 sec </div>
+        </li>
+        <li>
+          <div class="left">Acceleration 1/4 mile</div>
+          <div class="right">8.8 sec</div>
+        </li>
+        <li>
+          <div class="left">Top Speed</div>
+          <div class="right">Over 250 mph</div>
+        </li>
+        <li>
+          <div class="left">Wheel Torque</div>
+          <div class="right">10,000 Nm</div>
+        </li>
+        <li>
+          <div class="left">Mile Range</div>
+          <div class="right"> 620 miles</div>
+        </li>
+        <li>
+          <div class="left">Seating</div>
+          <div class="right">4</div>
+        </li>
+        <li>
+          <div class="left">Drive</div>
+          <div class="right">All-Wheel Drive</div>
+        </li>
+        <li>
+          <div class="left">Base Price</div>
+          <div class="right">$200,000</div>
+        </li>
+        <li>
+          <div class="left">Base Reservation</div>
+          <div class="right">$50,000</div>
+        </li>
+        <li>
+          <div class="left">Founders Series Price</div>
+          <div class="right">$250,000</div>
+        </li>
+        <li class="spannedLi">
+          <div class="left">Founders Series Reservation<br>
+            <span>(1,000 reservations available)</span>
+          </div>
+          <div class="right">$250,000</div>   
+        </li>
+      </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+     </main>
       
 
 
