quarter main done

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -124,6 +124,12 @@
           <div class="right">$250,000</div>   
         </li>
       </ul>
+      <img id="backImg" src="../IMAGES/back.jpg" alt="">
+      <div class="backImgText">
+        <div><h2>Designed for Performance <br> and Aero Efficiency</h2></div>
+        <div><p>As an all-electric supercar, Roadster maximizes the potential <br> of aerodynamic 
+          engineering—with record-setting performance and efficiency.</p></div>
+      </div>
 
 
 
