fixed some issues and wrote a JS script for the animations (IntersectionObserver)

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -68,7 +68,7 @@
         </div>
       </header>
      <main>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/tw4jkyfY4HE?autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="animationConcerned" width="560" height="315" src="https://www.youtube.com/embed/tw4jkyfY4HE?autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <ul>
         <li>
           <div class="left">Base Specs</div>
@@ -124,7 +124,7 @@
           <div class="right">$250,000</div>   
         </li>
       </ul>
-      <img id="backImg" src="../IMAGES/back.jpg" alt="">
+      <img class="animationConcerned" id="backImg" src="../IMAGES/back.jpg" alt="">
       <div class="backImgText">
         <div><h2>Designed for Performance <br> and Aero Efficiency</h2></div>
         <div><p>As an all-electric supercar, Roadster maximizes the potential <br> of aerodynamic 
@@ -264,5 +264,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../JS/app.js"></script>
   </body>
 </html>
