--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -128,8 +128,19 @@
       <div class="backImgText">
         <div><h2>Designed for Performance <br> and Aero Efficiency</h2></div>
         <div><p>As an all-electric supercar, Roadster maximizes the potential <br> of aerodynamic 
-          engineering—with record-setting performance and efficiency.</p></div>
+          engineering—with record-setting performance <br> and efficiency.</p></div>
       </div>
+      <img class="animationConcerned" id="interiorImg" src="../IMAGES/interior.jpg"  alt="">
+      <div class="interiorText">
+        <div><p>Interior</p></div>
+        <div><p>The first supercar to set every performance record and still fit seating for four.</p></div>
+      </div>
+      <img class="animationConcerned topImg" id="topImg_1" src="../IMAGES/top.jpg" alt="">
+      <div class="carTopText"><h3 class="trigger" >Glass Roof <span>'Hover Here'</span></h3>
+      <p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p>
+      </div>
+      <img class="topImg topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
+      
 
 
 
