fixed a clipping bug and added a hamburger menu 50% functionnal

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -17,11 +17,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/styles.css">
   </head>
+
+
+
+
+
+
+
+
   <body>
       <header>
+        
           <div class="container-fluid">
              <div class="row">
-              <nav class="col-xs-12 col-sm-12 col-md-11 col-lg-12">
+              <nav id="nav" class="col-xs-12 col-sm-12 col-md-11 col-lg-12">
                 <div class="navDivs">
                   <img src="../IMAGES/logo.svg" width="100px" alt="">
                 </div>
@@ -41,7 +50,13 @@
                     <li>TESLA ACCOUNT</li>
                   </ul>
                 </div>
+               
               </nav>
+              <div id="hamburgerContainer" class="hamburgerContainer">
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+              </div>
              </div>
           </div>
         <h1>Roadster</h1>
