fixed the 150% zoom issue on desktop, optimized the JS file, fixed some awful display bugs/glitches (travail de finition)

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -43,7 +43,6 @@
                     <li>TESLA ACCOUNT</li>
                   </ul>
                 </div>
-               
               </nav>
               <div id="hamburgerContainer" class="hamburgerContainer">
                 <div class="hamburger"></div>
@@ -145,8 +144,8 @@
       </div>
       <img class="animationConcerned" id="topImg_1" src="../IMAGES/top.jpg" alt="">
       
-      <div class="carTopText"><div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt=""></div>
-      <h3>Glass Roof</h3><p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p></div>
+      <div class="carTopText"><div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
+      <h3>Glass Roof</h3><p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p></div></div>
       <div class="secondVideo">
       <iframe src="https://player.vimeo.com/video/249563752" width="640" height="360" frameborder="0" allow="autoplay; mute; fullscreen; picture-in-picture" allowfullscreen></iframe>
       <p>Watch the Roadster Unveil · November 16, 2017</p></div>
