fixed a heavy glitch with the second iframe interfearing with the intersectionObserver

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -146,7 +146,7 @@
       
       <div class="carTopText"><div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
       <h3>Glass Roof</h3><p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p></div></div>
-      <div class="secondVideo">
+      <div class="secondVideo animationConcerned">
       <iframe src="https://player.vimeo.com/video/249563752" width="640" height="360" frameborder="0" allow="autoplay; mute; fullscreen; picture-in-picture" allowfullscreen></iframe>
       <p>Watch the Roadster Unveil · November 16, 2017</p></div>
     </main>
