big leap on the mediaQ

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -19,14 +19,15 @@
     <link rel="stylesheet" href="../CSS/MediaQ.css">
   </head>
   <body>
+    <div class="wall" id="wall"></div>
       <header>
-        
           <div class="container-fluid">
              <div class="row">
               <nav id="nav" class="col-xs-12 col-sm-12 col-md-11 col-lg-12">
-                <div class="navDivs">
+                <div id="LogoNavDiv" class="navDivs">
                   <img src="../IMAGES/logo.svg" width="100px" alt="">
                 </div>
+                <img id="LogoImage" src="../IMAGES/logo.svg" width="100px" alt="">
                 <div class="navDivs">
                   <ul class="mainUl">
                     <li>Model S</li>  
