500px media Q fully done and 1st step into the 768px one !

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -58,7 +58,7 @@
           <br>
           <div class="specs">
             <h3>1.9s</h3> 
-            <span class="material-icons">speed</span>
+            <span id="speedSpaan" class="material-icons">speed</span>
             <p>0-60 mph</p>
           </div>
           <div class="specs">
