--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -58,7 +58,7 @@
           <br>
           <div class="specs">
             <h3>1.9s</h3> 
-            <span id="speedSpaan" class="material-icons">speed</span>
+            <span id="speedSpan" class="material-icons">speed</span>
             <p>0-60 mph</p>
           </div>
           <div class="specs">
@@ -163,126 +163,9 @@
           <li>Get Newsletter</li>
           <li>Forums</li>
           <li>Locations</li>
-        </ul>
-
-        
+        </ul>  
       </footer>
-      
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Optional JavaScript -->
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
