MediaQ fully done (99%) added a separated IntersectionObserver for the hard top tesla to reduce latency and to manipulate animation settings separetly and fixed a nav random bug with the help of the new FLEX function on the chrome web dev kit

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -143,8 +143,7 @@
         <div><p>Interior</p></div>
         <div><p>The first supercar to set every performance record and still fit seating for four.</p></div>
       </div>
-      <img class="animationConcerned" id="topImg_1" src="../IMAGES/top.jpg" alt="">
-      
+      <img id="topImg_1" src="../IMAGES/top.jpg" alt="">
       <div class="carTopText"><div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
       <h3>Glass Roof</h3><p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p></div></div>
       <div class="secondVideo animationConcerned">
