started to work on a new , much better and correct method of mediaQ using Firefox Devs ! (working across all browsers not only chrome)

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -1,174 +1,203 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Tesla</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<head>
+  <title>Tesla</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
 
 
-    <!-- Bootstrap CSS -->
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="stylesheet" href="../CSS/MediaQ.css">
-  </head>
-  <body>
-    <div class="wall" id="wall"></div>
-      <header>
-          <div class="container-fluid">
-             <div class="row">
-              <nav id="nav" class="col-xs-12 col-sm-12 col-md-11 col-lg-12">
-                <div id="LogoNavDiv" class="navDivs">
-                  <img src="../IMAGES/logo.svg" width="100px" alt="">
-                </div>
-                <img id="LogoImage" src="../IMAGES/logo.svg" width="100px" alt="">
-                <div class="navDivs">
-                  <ul class="mainUl">
-                    <li>Model S</li>  
-                    <li>Model 3</li>
-                    <li>Model X</li>  
-                    <li>Model Y</li>
-                    <li>SOLAR ROOF</li>
-                    <li>SOLAR PANELS</li>
-                  </ul>
-                </div>
-                <div class="navDivs">
-                  <ul class="secondUl">
-                    <li>Shop</li>
-                    <li>TESLA ACCOUNT</li>
-                  </ul>
-                </div>
-              </nav>
-              <div id="hamburgerContainer" class="hamburgerContainer">
-                <div class="hamburger"></div>
-                <div class="hamburger"></div>
-                <div class="hamburger"></div>
-              </div>
-             </div>
+  <!-- Bootstrap CSS -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="../CSS/styles.css">
+  <link rel="stylesheet" href="../CSS/MediaQ.css">
+</head>
+
+<body>
+  <div class="wall" id="wall"></div>
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <nav id="nav" class="col-xs-12 col-sm-12 col-md-11 col-lg-12">
+          <div id="LogoNavDiv" class="navDivs">
+            <img src="../IMAGES/logo.svg" width="100px" alt="">
           </div>
-        <h1>Roadster</h1>
-        <p>​The quickest car in the world, with record- <br> setting acceleration, range and performance.</p>
-        <div class="headerFooter">
-          <br>
-          <div class="specs">
-            <h3>1.9s</h3> 
-            <span id="speedSpan" class="material-icons">speed</span>
-            <p>0-60 mph</p>
+          <img id="LogoImage" src="../IMAGES/logo.svg" width="100px" alt="">
+          <div class="navDivs">
+            <ul class="mainUl">
+              <li>Model S</li>
+              <li>Model 3</li>
+              <li>Model X</li>
+              <li>Model Y</li>
+              <li>SOLAR ROOF</li>
+              <li>SOLAR PANELS</li>
+            </ul>
           </div>
-          <div class="specs">
-            <h3>+250mph</h3>
-            <p>Top Speed</p>
+          <div class="navDivs">
+            <ul class="secondUl">
+              <li>Shop</li>
+              <li>TESLA ACCOUNT</li>
+            </ul>
           </div>
-          <div class="specs">
-            <h3>620mi</h3>
-            <p>Range</p>
-          </div>
-          <button>RESERVE NOW</button>
+        </nav>
+        <div id="hamburgerContainer" class="hamburgerContainer">
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
         </div>
-        <div class="animationSign">
-         <a href="../HTML/Roadster.html#sennun"><span class="material-icons">vertical_align_bottom</span></a>                           
+      </div>
+    </div>
+    <h1>Roadster</h1>
+    <p id="quickestCar">​The quickest car in the world, with record- <br> setting acceleration, range and performance.
+    </p>
+    <div class="headerFooter">
+      <br>
+      <div class="specs">
+        <h3>1.9s</h3>
+        <span id="speedSpan" class="material-icons">speed</span>
+        <p>0-60 mph</p>
+      </div>
+      <div class="specs">
+        <h3>+250mph</h3>
+        <p>Top Speed</p>
+      </div>
+      <div class="specs">
+        <h3>620mi</h3>
+        <p>Range</p>
+      </div>
+      <button>RESERVE NOW</button>
+    </div>
+    <div class="animationSign">
+      <a href="../HTML/Roadster.html#sennun"><span class="material-icons">vertical_align_bottom</span></a>
+    </div>
+  </header>
+  <main>
+    <iframe class="animationConcerned" width="560" height="315"
+      src="https://www.youtube.com/embed/tw4jkyfY4HE?autoplay=1&mute=1&controls=0" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    <ul>
+      <li>
+        <div class="left">Base Specs</div>
+      </li>
+      <li>
+        <div class="left">Acceleration 0-60 mph</div>
+        <div class="right">1.9 sec</div>
+      </li>
+      <li>
+        <div class="left">Acceleration</div>
+        <div class="right">4.2 sec </div>
+      </li>
+      <li>
+        <div class="left">Acceleration 1/4 mile</div>
+        <div class="right">8.8 sec</div>
+      </li>
+      <li>
+        <div class="left">Top Speed</div>
+        <div class="right">Over 250 mph</div>
+      </li>
+      <li>
+        <div class="left">Wheel Torque</div>
+        <div class="right">10,000 Nm</div>
+      </li>
+      <li>
+        <div class="left">Mile Range</div>
+        <div class="right"> 620 miles</div>
+      </li>
+      <li>
+        <div class="left">Seating</div>
+        <div class="right">4</div>
+      </li>
+      <li>
+        <div class="left">Drive</div>
+        <div class="right">All-Wheel Drive</div>
+      </li>
+      <li>
+        <div class="left">Base Price</div>
+        <div class="right">$200,000</div>
+      </li>
+      <li>
+        <div class="left">Base Reservation</div>
+        <div class="right">$50,000</div>
+      </li>
+      <li>
+        <div class="left">Founders Series Price</div>
+        <div class="right">$250,000</div>
+      </li>
+      <li class="spannedLi">
+        <div class="left">Founders Series Reservation<br>
+          <span>(1,000 reservations available)</span>
         </div>
-      </header>
-     <main>
-      <iframe class="animationConcerned" width="560" height="315" src="https://www.youtube.com/embed/tw4jkyfY4HE?autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <ul>
-        <li>
-          <div class="left">Base Specs</div>
-        </li>
-        <li>
-          <div class="left">Acceleration 0-60 mph</div>
-          <div class="right">1.9 sec</div>
-        </li>
-        <li>
-          <div class="left">Acceleration</div>
-          <div class="right">4.2 sec </div>
-        </li>
-        <li>
-          <div class="left">Acceleration 1/4 mile</div>
-          <div class="right">8.8 sec</div>
-        </li>
-        <li>
-          <div class="left">Top Speed</div>
-          <div class="right">Over 250 mph</div>
-        </li>
-        <li>
-          <div class="left">Wheel Torque</div>
-          <div class="right">10,000 Nm</div>
-        </li>
-        <li>
-          <div class="left">Mile Range</div>
-          <div class="right"> 620 miles</div>
-        </li>
-        <li>
-          <div class="left">Seating</div>
-          <div class="right">4</div>
-        </li>
-        <li>
-          <div class="left">Drive</div>
-          <div class="right">All-Wheel Drive</div>
-        </li>
-        <li>
-          <div class="left">Base Price</div>
-          <div class="right">$200,000</div>
-        </li>
-        <li>
-          <div class="left">Base Reservation</div>
-          <div class="right">$50,000</div>
-        </li>
-        <li>
-          <div class="left">Founders Series Price</div>
-          <div class="right">$250,000</div>
-        </li>
-        <li class="spannedLi">
-          <div class="left">Founders Series Reservation<br>
-            <span>(1,000 reservations available)</span>
-          </div>
-          <div class="right">$250,000</div>   
-        </li>
-      </ul>
-      <img class="animationConcerned" id="backImg" src="../IMAGES/back.jpg" alt="">
-      <div class="backImgText">
-        <div><h2>Designed for Performance <br> and Aero Efficiency</h2></div>
-        <div><p>As an all-electric supercar, Roadster maximizes the potential <br> of aerodynamic 
-          engineering—with record-setting performance <br> and efficiency.</p></div>
+        <div class="right">$250,000</div>
+      </li>
+    </ul>
+    <img class="animationConcerned" id="backImg" src="../IMAGES/back.jpg" alt="">
+    <div class="backImgText">
+      <div>
+        <h2>Designed for Performance <br> and Aero Efficiency</h2>
       </div>
-      <img class="animationConcerned" id="interiorImg" src="../IMAGES/interior.jpg"  alt="">
-      <div class="interiorText">
-        <div><p>Interior</p></div>
-        <div><p>The first supercar to set every performance record and still fit seating for four.</p></div>
+      <div>
+        <p>As an all-electric supercar, Roadster maximizes the potential <br> of aerodynamic
+          engineering—with record-setting performance <br> and efficiency.</p>
       </div>
-      <img id="topImg_1" src="../IMAGES/top.jpg" alt="">
-      <div class="carTopText"><div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
-      <h3>Glass Roof</h3><p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving experience.</p></div></div>
-      <div class="secondVideo animationConcerned">
-      <iframe src="https://player.vimeo.com/video/249563752" width="640" height="360" frameborder="0" allow="autoplay; mute; fullscreen; picture-in-picture" allowfullscreen></iframe>
-      <p>Watch the Roadster Unveil · November 16, 2017</p></div>
-    </main>
-     <footer>
-        <div id="verticalLine"></div>
-        <button>RESERVE NOW</button>
-        <button>GET NEWSLETTER</button>
-        <ul> 
-          <li>Tesla © 2021</li>
-          <li>Privacy & Legal</li>
-          <li>Contact</li>
-          <li>Careers</li>
-          <li>Get Newsletter</li>
-          <li>Forums</li>
-          <li>Locations</li>
-        </ul>  
-      </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../JS/app.js"></script>
-  </body>
+    </div>
+    <img class="animationConcerned" id="interiorImg" src="../IMAGES/interior.jpg" alt="">
+    <div class="interiorText">
+      <div>
+        <p>Interior</p>
+      </div>
+      <div>
+        <p>The first supercar to set every performance record and still fit seating for four.</p>
+      </div>
+    </div>
+    <img id="topImg_1" src="../IMAGES/top.jpg" alt="">
+    <div class="carTopText">
+      <div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
+        <h3>Glass Roof</h3>
+        <p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving
+          experience.</p>
+      </div>
+    </div>
+    <div class="secondVideo animationConcerned">
+      <iframe src="https://player.vimeo.com/video/249563752" width="640" height="360" frameborder="0"
+        allow="autoplay; mute; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <p>Watch the Roadster Unveil · November 16, 2017</p>
+    </div>
+  </main>
+  <footer>
+    <div id="verticalLine"></div>
+    <button>RESERVE NOW</button>
+    <button>GET NEWSLETTER</button>
+    <ul>
+      <li>Tesla © 2021</li>
+      <li>Privacy & Legal</li>
+      <li>Contact</li>
+      <li>Careers</li>
+      <li>Get Newsletter</li>
+      <li>Forums</li>
+      <li>Locations</li>
+    </ul>
+  </footer>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="../JS/app.js"></script>
+</body>
+
 </html>
