nearly done the small screen mediaQ (only hamburger menu animation still to be done) fixed some major bugs

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -160,7 +160,7 @@
     </div>
     <img id="topImg_1" src="../IMAGES/top.jpg" alt="">
     <div class="carTopText">
-      <div class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
+      <div id="trigger" class="trigger"><img class="topImg_2" id="topImg_2" src="../IMAGES/top_2.jpg" alt="">
         <h3>Glass Roof</h3>
         <p>A lightweight, removable Glass Roof <br> stores in the trunk for an open-air, <br> convertible driving
           experience.</p>
