just implemented ScrollMagic and GSAP for animating the hamburger menu !

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <h1>Roadster</h1>
+    <h1 class="h1">Roadster</h1>
     <p id="quickestCar">​The quickest car in the world, with record- <br> setting acceleration, range and performance.
     </p>
     <div class="headerFooter">
@@ -197,6 +197,15 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <!-- gsap and scrollmagic plugs -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+    integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.js"
+    integrity="sha512-judXDFLnOTJsUwd55lhbrX3uSoSQSOZR6vNrsll+4ViUFv+XOIr/xaIK96soMj6s5jVszd7I97a0H+WhgFwTEg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="../JS/app.js"></script>
 </body>
 
