finished 100% of the ham menu removed the scrollMagic method and used pure js instead

--- a/HTML/Roadster.html
+++ b/HTML/Roadster.html
@@ -49,9 +49,9 @@
           </div>
         </nav>
         <div id="hamburgerContainer" class="hamburgerContainer">
-          <div class="hamburger"></div>
-          <div class="hamburger"></div>
-          <div class="hamburger"></div>
+          <div id="ham1" class="hamburger"></div>
+          <div id="ham2" class="hamburger"></div>
+          <div id="ham3" class="hamburger"></div>
         </div>
       </div>
     </div>
